--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ body {
   cursor: pointer;
 }
 
-div.selected {
+.selected {
   border: 1px solid #e03131;
   background-color: #e03131;
   color: #fff;
